# LogSense-Backend

./: .gitignore  CMakeLists.txt  README.md  log_generator.sh  main.cpp  reply.json
